--- a/ansible/roles/enroot/defaults/main.yml
+++ b/ansible/roles/enroot/defaults/main.yml
@@ -17,7 +17,7 @@
 # that enables the use of enroot with service accounts and users from external
 # organizations whose UIDs exceed 2**31
 # https://github.com/NVIDIA/enroot/issues/195
-enroot_version: 3.5.0
-enroot_url: https://github.com/stevewen89/enroot/
+enroot_version: 09ae4b2c18a18ed5ab34b7697006aa18697c4cec
+enroot_url: https://github.com/NVIDIA/enroot/
 enroot_installation_path: "{{ paths.install }}"
 enroot_install_optional_deps: true
